--- a/experimental pipeline.ipynb
+++ b/experimental pipeline.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,16 +359,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: fsspec in c:\\users\\risha\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (2024.3.1)\n"
+     ]
+    }
+   ],
    "source": [
+    "!pip install --upgrade fsspec\n",
     "dp_matrix = dp_pipeline(doc_df, stopwords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,17 +592,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dtopic_pipeline(dp_matrix, topics):\n",
-    "    ''' This function contaisn the pipeline for generating the \n",
+    "from transformers import BertModel, BertTokenizer\n",
+    "import pandas as pd\n",
+    "\n",
+    "def dtopic_pipeline(dp_matrix, topics, tokenizer):\n",
+    "    ''' This function contains the pipeline for generating the \n",
     "    document-topic matrix'''\n",
-    "    # Load Scibert model\n",
+    "    # Load SciBERT model\n",
     "    MODEL_DIR = '{}scibert_scivocab_uncased'.format(MODEL_PATH)\n",
     "    model = BertModel.from_pretrained(MODEL_DIR)\n",
-    "    tokenizer = BertTokenizer.from_pretrained(MODEL_DIR)\n",
     "    \n",
     "    # Prepare model dictionary\n",
     "    # Note: For the pretrained vectors of phrases, you will need to read here.\n",
@@ -617,24 +628,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "dtopic_matrix, topic_vec, topic_phrase = dtopic_pipeline(dp_matrix, topics)"
+    "# Load BertTokenizer\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "\n",
+    "# Call dp_pipeline to get dp_matrix\n",
+    "dp_matrix = dp_pipeline(doc_df, stopwords)\n",
+    "\n",
+    "# Assuming dtopic_pipeline is defined elsewhere\n",
+    "dtopic_matrix, topic_vec, topic_phrase = dtopic_pipeline(dp_matrix, topics, tokenizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'health application': [('health_monitoring', 0.831919)],\n",
-       " 'natural language processing': [('natural_language_processing', 0.9999999)],\n",
-       " 'computer vision': [('computer_vision_technology', 0.84557104)]}"
+       "{'health application': [('computer_vision_structural', 0.9259129)],\n",
+       " 'natural language processing': [('natural_language_processing', 1.0)],\n",
+       " 'computer vision': [('computer_vision_structural', 0.9293691)]}"
       ]
      },
      "metadata": {},
@@ -647,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -685,21 +705,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>d1</th>\n",
-       "      <td>0.32207</td>\n",
-       "      <td>0.67793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.781963</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d2</th>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>1.00000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.781963</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d3</th>\n",
-       "      <td>0.60000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>7.336971</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7.336971</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -708,9 +728,9 @@
       "text/plain": [
        "        health application  natural language processing  computer vision\n",
        "doc_id                                                                  \n",
-       "d1                 0.32207                      0.67793              0.0\n",
-       "d2                 0.00000                      1.00000              0.0\n",
-       "d3                 0.60000                      0.00000              0.4"
+       "d1                0.000000                     1.781963         0.000000\n",
+       "d2                0.000000                     1.781963         0.000000\n",
+       "d3                7.336971                     0.000000         7.336971"
       ]
      },
      "metadata": {},
@@ -743,15 +763,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>health application</th>\n",
-       "      <td>0.307357</td>\n",
+       "      <td>2.445657</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>natural language processing</th>\n",
-       "      <td>0.559310</td>\n",
+       "      <td>1.187975</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>computer vision</th>\n",
-       "      <td>0.133333</td>\n",
+       "      <td>2.445657</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -759,9 +779,9 @@
       ],
       "text/plain": [
        "                              weights\n",
-       "health application           0.307357\n",
-       "natural language processing  0.559310\n",
-       "computer vision              0.133333"
+       "health application           2.445657\n",
+       "natural language processing  1.187975\n",
+       "computer vision              2.445657"
       ]
      },
      "metadata": {},
@@ -782,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -850,21 +870,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>e1</th>\n",
-       "      <td>0.32207</td>\n",
-       "      <td>1.67793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.563926</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>e2</th>\n",
-       "      <td>0.92207</td>\n",
-       "      <td>0.67793</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>7.336971</td>\n",
+       "      <td>1.781963</td>\n",
+       "      <td>7.336971</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>e3</th>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>1.00000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.781963</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -872,9 +892,9 @@
       ],
       "text/plain": [
        "    health application  natural language processing  computer vision\n",
-       "e1             0.32207                      1.67793              0.0\n",
-       "e2             0.92207                      0.67793              0.4\n",
-       "e3             0.00000                      1.00000              0.0"
+       "e1            0.000000                     3.563926         0.000000\n",
+       "e2            7.336971                     1.781963         7.336971\n",
+       "e3            0.000000                     1.781963         0.000000"
       ]
      },
      "metadata": {},
@@ -909,21 +929,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>d1</th>\n",
-       "      <td>0.32207</td>\n",
-       "      <td>0.67793</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.781963</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d2</th>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>1.00000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.781963</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d3</th>\n",
-       "      <td>0.60000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>7.336971</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7.336971</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -931,9 +951,9 @@
       ],
       "text/plain": [
        "    health application  natural language processing  computer vision\n",
-       "d1             0.32207                      0.67793              0.0\n",
-       "d2             0.00000                      1.00000              0.0\n",
-       "d3             0.60000                      0.00000              0.4"
+       "d1            0.000000                     1.781963         0.000000\n",
+       "d2            0.000000                     1.781963         0.000000\n",
+       "d3            7.336971                     0.000000         7.336971"
       ]
      },
      "metadata": {},
@@ -954,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1126,12 +1146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ef_pipeline(ed_matrix, ed_graph, exp_pr_df, doc_pr_df, ed_count, de_count):\n",
-    "    # Intialise parameters\n",
+    "    # Initialize parameters\n",
     "    params = {\n",
     "        'ed_graph': ed_graph,\n",
     "        'ed_matrix': ed_matrix,\n",
@@ -1148,12 +1168,12 @@
     "    # Run model\n",
     "    etop_matrix = trainer.run_expfinder(topics, params)\n",
     "    \n",
-    "    display(etop_matrix)"
+    "    display(etop_matrix)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1185,15 +1205,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>health application</th>\n",
-       "      <td>0.571502</td>\n",
-       "      <td>0.611617</td>\n",
-       "      <td>0.547092</td>\n",
+       "      <td>0.570875</td>\n",
+       "      <td>0.608666</td>\n",
+       "      <td>0.551024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>natural language processing</th>\n",
-       "      <td>0.581399</td>\n",
-       "      <td>0.549855</td>\n",
-       "      <td>0.599696</td>\n",
+       "      <td>0.580811</td>\n",
+       "      <td>0.557780</td>\n",
+       "      <td>0.592908</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>computer vision</th>\n",
@@ -1207,8 +1227,8 @@
       ],
       "text/plain": [
        "                                   e1        e2        e3\n",
-       "health application           0.571502  0.611617  0.547092\n",
-       "natural language processing  0.581399  0.549855  0.599696\n",
+       "health application           0.570875  0.608666  0.551024\n",
+       "natural language processing  0.580811  0.557780  0.592908\n",
        "computer vision              0.570875  0.608666  0.551024"
       ]
      },
@@ -1219,18 +1239,11 @@
    "source": [
     "ef_pipeline(ed_matrix, ed_graph, exp_pr_df, doc_pr_df, ed_count, de_count)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1244,7 +1257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.0"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
